# flitelite

./: .gitignore  CMakeLists.txt
example/: flite_main.cpp
include/: FestivalSpeechSynth.h  FliteLite.h  cst_cg.h  flite_lite_config.h  wavio.h
lib/: FestivalSpeechSynth.cpp  FliteLite.cpp  README.md  flite_lite_config.h
lib/cg/: cst_cg.c  cst_mlsa.c  cst_mlsa.h
lib/private-includes/: VocoderSetup.h  cst_cg.h  cst_utterance.h  wavio.h
lib/synth/: cst_synth.c
main/: FestivalSpeechSynth.cpp  FestivalSpeechSynth.h  flite_lang_list.c  flite_lite_config.h  flite_main.c  flite_main.cpp  flite_voice_list.c
src/cg/: cst_cg.c  cst_mlsa.c  cst_mlsa.h
src/synth/: cst_synth.c
